[gd_scene load_steps=7 format=2]

[ext_resource path="res://LevelNavTest.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://AStar.gd" type="Script" id=3]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 62, 0, 62, 64, 0, 64 )

[sub_resource type="TileSet" id=1]
0/name = "icon.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 15 )

[node name="CollisionBasedPathfinding" type="Node2D"]
script = ExtResource( 1 )

[node name="Sector1" type="TileMap" parent="."]
self_modulate = Color( 0.596078, 0.462745, 0.462745, 1 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 65536, 0, 0, 65543, 0, 0, 131072, 0, 0, 131079, 0, 0, 196608, 0, 0, 196615, 0, 0, 262144, 0, 0, 262151, 0, 0, 327680, 0, 0, 327687, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0 )

[node name="Sector2" type="TileMap" parent="."]
visible = false
self_modulate = Color( 0.596078, 0.462745, 0.462745, 1 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65547, 0, 0, 65551, 0, 0, 131083, 0, 0, 131087, 0, 0, 196619, 0, 0, 196623, 0, 0, 262156, 0, 0, 262159, 0, 0, 327692, 0, 0, 327695, 0, 0, 393228, 0, 0, 393231, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0 )

[node name="AStar1" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Body1" type="KinematicBody2D" parent="."]
position = Vector2( 313.145, -77.4982 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body1"]
shape = SubResource( 3 )
